--- a/index.html
+++ b/index.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" class="h-full">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>LUME - Acolhimento</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            height: {
+              'screen-safe': '100dvh', // Usa dvh para mobile moderno
+            },
+            minHeight: {
+              'screen-safe': '100dvh',
+            }
+          }
+        }
+      }
+    </script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap');
       
-      body {
+      html, body {
+        height: 100%;
+        overflow: hidden; /* Impede scroll na janela inteira, apenas dentro dos componentes */
         font-family: 'Nunito', sans-serif;
         background-color: #f8fafc;
         overscroll-behavior: none;
+        touch-action: pan-x pan-y;
       }
 
-      /* Custom animations for breathing and calming effects */
+      #root {
+        height: 100%;
+        width: 100%;
+      }
+
+      /* Custom animations */
       @keyframes breathe {
         0%, 100% { transform: scale(1); opacity: 0.8; }
         50% { transform: scale(1.5); opacity: 0.4; }
@@ -40,6 +62,15 @@
       
       .animate-glow {
         animation: glow 3s infinite alternate;
+      }
+
+      /* Utilitário para esconder barra de rolagem mas permitir scroll */
+      .scrollbar-hide::-webkit-scrollbar {
+          display: none;
+      }
+      .scrollbar-hide {
+          -ms-overflow-style: none;
+          scrollbar-width: none;
       }
     </style>
   <script type="importmap">
